# qa_pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml
.devin/workflows/: setup-linting.md
.github/workflows/: deepeval-copilot.yml  lint.yml  qa_pilot.yml
app/: __init__.py  ai_client.py  github_client.py  main_deepeval_copilot.py  main_qa_pilot.py  metrics_config.py  qa_pilot.py
app/deepeval_copilot/: __init__.py  artifact_generator.py  component_detector.py  deepeval_copilot.py  evaluation_data_analyzer.py  metric_selector.py  models.py  new_metric_analyzer.py  risk_analyzer.py  scenario_generator.py  value_analyzer.py
tests/: __init__.py  test_artifact_generator.py  test_component_detector.py  test_metric_selector.py  test_scenario_generator.py
utils/: metrics.py
